// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Should disabled work 1`] = `
<div>
  <div
    class="ant-color-picker-placeholder ant-color-picker-placeholder-disabled"
    format="hex"
  >
    <div
      class="ant-color-picker-placeholder-container"
    >
      <div
        class="ant-color-picker-placeholder-display"
      />
      <div
        class="ant-color-picker-placeholder-layer"
        style="background-color: rgb(22, 119, 255);"
      />
    </div>
  </div>
</div>
`;

exports[`ColorPicker Should render trigger work 1`] = `
<div>
  <div
    class="trigger"
  />
</div>
`;

exports[`ColorPicker rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-color-picker-placeholder"
  format="hex"
>
  <div
    class="ant-color-picker-placeholder-container"
  >
    <div
      class="ant-color-picker-placeholder-display"
    />
    <div
      class="ant-color-picker-placeholder-layer"
      style="background-color: rgb(22, 119, 255);"
    />
  </div>
</div>
`;
